--- a/.github/workflows/air_quality_hourly.yml
+++ b/.github/workflows/air_quality_hourly.yml
@@ -6,7 +6,7 @@ name: india_air_quality_json
   # Triggers the workflow on push or pull request events but only for the main branch
  #  workflow_dispatch:
 on:
- # schedule:
+ schedule:
      - cron: '45 * * * *'  # Runs every 45th min
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
